# Antivirus_Service

./: .gitignore  README.md  README.txt
Antivirus_Service/: Antivirus_Service.cpp  Antivirus_Service.h  Antivirus_Service.sln  Antivirus_Service.vcxproj  Antivirus_Service.vcxproj.filters  CMakeLists.txt  Logger.cpp  Logger.h  RequestHandler.cpp  RequestHandler.h
Antivirus_Service/Antiviru.3bac80a3/Debug/: Antivirus_Service.exe.recipe  Antivirus_Service.ilk  vc143.idb
Antivirus_Service/Antiviru.3bac80a3/Debug/Antiviru.3bac80a3.tlog/: Antivirus_Service.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Antivirus_Service/Antiviru.3bac80a3/x64/Debug/: Antivirus_Service.exe.recipe  Antivirus_Service.ilk  vc143.idb
Antivirus_Service/Antiviru.3bac80a3/x64/Debug/Antiviru.3bac80a3.tlog/: Antivirus_Service.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Antivirus_Service/src/: Antivirus_Service.cpp  Antivirus_Service.h  Logger.cpp  Logger.h
service/: CMakeLists.txt
service/lib/curl-8.11.0/builds/libcurl-vc-x86-release-static-ipv6-sspi-schannel-obj-curl/: curl.res
service/lib/curl-8.11.0/builds/libcurl-vc-x86-release-static-ipv6-sspi-schannel-obj-lib/: libcurl_a.lib
service/lib/curl-8.11.0/winbuild/: CURL_OBJS.inc  LIBCURL_OBJS.inc  vc140.idb
service/src/: Antivirus_Service.cpp  Antivirus_Service.h  Logger.cpp  Logger.h  RequestHandler.cpp
